infra/timeweb/10-gitops/apps/argocd.middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  redirectScheme:
    scheme: https
    permanent: true
