infra/timeweb/10-gitops/apps/argocd.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "50"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`argocd.archpad.pro`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: redirect-to-https
  tls:
    secretName: wildcard-archpad-pro-tls
